--- a/build.html
+++ b/build.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 07 2020 12:11:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5f1c74825997427a54233a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -16,47 +16,12 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/jraft-landing.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">
-      ! function(o, c) {
-        var n = c.documentElement,
-          t = " w-mod-";
-        n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
-      }(window, document);
-    </script>
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
-  <script type="text/javascript">
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'UA-141202928-2', {
-        'anonymize_ip': false
-      });
-    </script>
-  <script type="text/javascript">
-      ! function(f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function() {
-          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = '2.0';
-        n.agent = 'plwebflow';
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s)
-      }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '669556453669016');
-      fbq('track', 'PageView');
-    </script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false});</script>
+  <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -88,19 +53,19 @@
     <div class="nav">
       <div class="blur w-embed">
         <style>
-            .background-blur {
-              -webkit-backdrop-filter: blur(20px);
-              backdrop-filter: blur(20px);
-            }
-          </style>
+	.background-blur{
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  }
+</style>
       </div>
       <div class="blur-nav w-embed">
         <style>
-            .navigation {
-              -webkit-backdrop-filter: blur(12px);
-              backdrop-filter: blur(12px);
-            }
-          </style>
+	.navigation{
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
+  }
+</style>
       </div>
     </div>
   </div>
@@ -159,20 +124,20 @@
       <div data-w-id="e74afc0d-6338-b6e2-c2b5-a12b2b8e48ed" class="builder-fixed-scroll-track">
         <div>
           <h2 class="heading-6">Performant Design, Easily Done.</h2>
-          <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-1.png" loading="lazy" width="435" srcset="images/Mobile-Builder-Screen-1-p-500.png 500w, images/Mobile-Builder-Screen-1-p-800.png 800w, images/Mobile-Builder-Screen-1-p-1080.png 1080w, images/Mobile-Builder-Screen-1.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" alt="" class="header-mobile-photo">
+          <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-1.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-1-p-500.png 500w, images/Mobile-Builder-Screen-1-p-800.png 800w, images/Mobile-Builder-Screen-1-p-1080.png 1080w, images/Mobile-Builder-Screen-1.png 1280w" alt="" class="header-mobile-photo">
             <h3 class="heading-7">It all starts with the block.</h3>
             <div class="text-block-38">If you&#x27;ve ever built a content website, you&#x27;ll know how difficult coding it is. Jraft gives you over 100+ customisable, professionally designed code blocks optimised for content discovery, ensuring readers never miss your stories.<br><span class="emphasise"></span></div>
           </div>
         </div>
-        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="435" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" alt="" class="header-mobile-photo">
+        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" alt="" class="header-mobile-photo">
           <h3 class="heading-7">Insert a block</h3>
           <div class="text-block-38">Jraft comes with <span class="emphasise">over 100+, professionally designed blocks for you to stack.</span> For those handy with code, upload, reuse, and share your blocks with your entire team. Forget hassling tech teams to make a font the perfect shade of grey — Jraft’s builder allows them to make changes to your code on the fly.<br></div>
         </div>
-        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-3.png" loading="lazy" width="435" srcset="images/Mobile-Builder-Screen-3-p-500.png 500w, images/Mobile-Builder-Screen-3-p-800.png 800w, images/Mobile-Builder-Screen-3-p-1080.png 1080w, images/Mobile-Builder-Screen-3.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" alt="" class="header-mobile-photo">
+        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-3.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-3-p-500.png 500w, images/Mobile-Builder-Screen-3-p-800.png 800w, images/Mobile-Builder-Screen-3-p-1080.png 1080w, images/Mobile-Builder-Screen-3.png 1280w" alt="" class="header-mobile-photo">
           <h3 class="heading-7">Connect your content</h3>
           <div class="text-block-38">Easily establish relationships between content categories and page sections to dynamically update your new content. Header tags pre-applied with the block so you can forget about manually adding SEO tags.<br></div>
         </div>
-        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-4.png" loading="lazy" width="435" srcset="images/Mobile-Builder-Screen-4-p-500.png 500w, images/Mobile-Builder-Screen-4-p-800.png 800w, images/Mobile-Builder-Screen-4-p-1080.png 1080w, images/Mobile-Builder-Screen-4.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" alt="" class="header-mobile-photo">
+        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-4.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-4-p-500.png 500w, images/Mobile-Builder-Screen-4-p-800.png 800w, images/Mobile-Builder-Screen-4-p-1080.png 1080w, images/Mobile-Builder-Screen-4.png 1280w" alt="" class="header-mobile-photo">
           <h3 class="heading-7">Style it with ease</h3>
           <div class="text-block-38">Style any part of the block to fit your fancy. From adding your logo to changing fonts and background colours, <span class="emphasise">all blocks are easily customisable</span> with Jraft exporting clean HTML &amp; CSS.</div>
         </div>
@@ -185,11 +150,11 @@
         <div class="virtual-block-wrapper">
           <div class="foreground-virtual-block-wrapper">
             <div class="add-block-wrapper"><img src="images/Floatbox.png" loading="lazy" width="383" alt="" class="add-block"></div>
-            <div class="virtual-block _1"><img src="images/Virtual-Block-1.png" loading="lazy" width="381" srcset="images/Virtual-Block-1-p-500.png 500w, images/Virtual-Block-1-p-800.png 800w, images/Virtual-Block-1-p-1080.png 1080w, images/Virtual-Block-1.png 1203w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" alt="" class="top-block"></div>
-            <div class="virtual-block _2"><img src="images/Virtual-Block-2.png" loading="lazy" width="374" srcset="images/Virtual-Block-2-p-500.png 500w, images/Virtual-Block-2-p-800.png 800w, images/Virtual-Block-2-p-1080.png 1080w, images/Virtual-Block-2.png 1200w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" alt="" class="bottom-block"></div>
+            <div class="virtual-block _1"><img src="images/Virtual-Block-1.png" loading="lazy" width="381" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/Virtual-Block-1-p-500.png 500w, images/Virtual-Block-1-p-800.png 800w, images/Virtual-Block-1-p-1080.png 1080w, images/Virtual-Block-1.png 1203w" alt="" class="top-block"></div>
+            <div class="virtual-block _2"><img src="images/Virtual-Block-2.png" loading="lazy" width="374" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/Virtual-Block-2-p-500.png 500w, images/Virtual-Block-2-p-800.png 800w, images/Virtual-Block-2-p-1080.png 1080w, images/Virtual-Block-2.png 1200w" alt="" class="bottom-block"></div>
           </div>
           <div class="virtual-block _3">
-            <div class="div-block-1406"><img src="images/3.png" loading="lazy" alt="" class="block-desk-dropdown _3"><img src="images/2.png" loading="lazy" alt="" class="block-desk-dropdown _2"><img src="images/1.png" loading="lazy" alt="" class="block-desk-dropdown _1"></div><img src="images/2_1.png" loading="lazy" width="383" srcset="images/2_1-p-500.png 500w, images/2_1.png 800w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" alt="" class="bg-block _2"><img src="images/1_1.png" loading="lazy" width="434" srcset="images/1_1-p-500.png 500w, images/1_1.png 800w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" alt="" class="bg-block _1"></div>
+            <div class="div-block-1406"><img src="images/3.png" loading="lazy" alt="" class="block-desk-dropdown _3"><img src="images/2.png" loading="lazy" alt="" class="block-desk-dropdown _2"><img src="images/1.png" loading="lazy" alt="" class="block-desk-dropdown _1"></div><img src="images/2_1.png" loading="lazy" width="383" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/2_1-p-500.png 500w, images/2_1.png 800w" alt="" class="bg-block _2"><img src="images/1_1.png" loading="lazy" width="434" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/1_1-p-500.png 500w, images/1_1.png 800w" alt="" class="bg-block _1"></div>
           <div class="photo-bg-colour builder-2"></div>
         </div>
       </div>
@@ -202,7 +167,7 @@
         <div class="text-block-46">Like our page builder, Jraft&#x27;s article builder comes with a variety of professionally designed templates for you to customise. From font size to custom drop caps and pull quotes, Jraft allows you to adapt the styling of an article template to suit every style of publication and any screen size.<br></div>
       </div>
       <div data-w-id="609e9c2b-f3cf-991f-0436-7c730b6fc04e" class="div-block-1404">
-        <div class="div-block-1413"><img src="images/Article-Builder.png" loading="lazy" width="400" srcset="images/Article-Builder-p-500.png 500w, images/Article-Builder-p-800.png 800w, images/Article-Builder-p-1080.png 1080w, images/Article-Builder.png 1244w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 95vw, (max-width: 991px) 85vw, 86vw" alt="" class="image-49"></div>
+        <div class="div-block-1413"><img src="images/Article-Builder.png" loading="lazy" width="400" sizes="(max-width: 479px) 90vw, (max-width: 767px) 95vw, (max-width: 991px) 85vw, 86vw" srcset="images/Article-Builder-p-500.png 500w, images/Article-Builder-p-800.png 800w, images/Article-Builder-p-1080.png 1080w, images/Article-Builder.png 1244w" alt="" class="image-49"></div>
         <div class="photo-bg-colour testimonial-bruce"></div>
       </div>
     </div>
@@ -333,8 +298,8 @@
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post">
-            <div class="div-block-6"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
+          <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
+            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
           </div>
