--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 01:17:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -19,8 +19,10 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <style>.anti-flicker-hide { opacity: 0 !important}</style>
+  <script type="text/javascript">(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;})(window,document.documentElement,'anti-flicker-hide','dataLayer',4000,{'OPT-W8NZSFV':true});</script>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false});</script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false, 'optimize_id': 'OPT-W8NZSFV'});</script>
   <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
 </head>
 <body class="body features">
