--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="hero-text">
           <div class="text-block-23">You&#x27;ve found</div>
           <h1 class="hero-header landing">The Best Publishing Platform Ever.</h1>
-          <div class="hero-paragraph">Jraft brings writers, editors, and designers together to create publications people want to discover. Whether you&#x27;re a small blogger or a big city publisher, Jraft is the platform to showcase your best work.</div>
+          <div class="hero-paragraph">Jraft brings real-time collaboration to writers, editors, and designers together to build publications people want to discover. Whether you&#x27;re a blogger or a big city publisher, Jraft is the platform to showcase your best work.</div>
           <div class="div-block"><a href="#" class="button square-blackbg w-button">Join Beta</a>
             <div class="launching-soon">Launching Soon</div>
           </div>
